bugfix: fixed XSS bugs using 'escape' smarty modifier - probably not all places (LMS #1910)

--- a/templates/default/document/documentlist.html
+++ b/templates/default/document/documentlist.html
@@ -198,7 +198,7 @@
 		</TD>
 		<TD class="nobr" onclick="window.open('?m=documentview&amp;id={$doc.docid}');">
 			{$doc.username|escape}
-			{if $doc.cuserid} / {$doc.cusername}{/if}
+			{if $doc.cuserid} / {$doc.cusername|escape}{/if}
 			{if $doc.closed == 3}
 				{trans("(customer/sms)")}
 			{elseif $doc.closed == 2}
