bugfix: avoid XSS in netdev ip forms (LMS #1910)

--- a/templates/default/netdev/netdevipinfobox.html
+++ b/templates/default/netdev/netdevipinfobox.html
@@ -139,7 +139,7 @@
 									</td>
 									<td>
 										{if !ConfigHelper::checkConfig('phpui.protect_passwords')}
-											{$nodeipdata.passwd}
+											{$nodeipdata.passwd|escape}
 										{/if}
 										{button type="link" icon="clipboard" class="lms-ui-button-clipboard"
 											data_clipboard_text="{$nodeipdata.passwd|escape}"}
