bugfix: avoid XSS in customer documents list description field (LMS #1910)

--- a/templates/default/customer/customerdocuments.html
+++ b/templates/default/customer/customerdocuments.html
@@ -101,7 +101,7 @@
 						</div>
 						<div class="lms-ui-tab-table-column description">
 							{if $doc.description}
-								{$doc.description|replace:"\n":'<br>'}
+								{$doc.description|escape|replace:"\n":'<br>'}
 							{else}
 								&ndash;
 							{/if}
