bugfix: avoid XSS in cash source forms (LMS #1910)

--- a/templates/default/cash/cashsourceadd.html
+++ b/templates/default/cash/cashsourceadd.html
@@ -50,7 +50,7 @@
 			</td>
 			<td>
 				<textarea rows="5" cols="50" name="sourceadd[description]" form="sourceadd"
-					{tip text="Enter additional information (optional)" trigger="description"}>{$sourceadd.description}</textarea>
+					{tip text="Enter additional information (optional)" trigger="description"}>{$sourceadd.description|escape}</textarea>
 			</td>
 		</tr>
 		<tr>
