--- a/templates/default/cash/cashsourceedit.html
+++ b/templates/default/cash/cashsourceedit.html
@@ -51,7 +51,7 @@
 			</td>
 			<td>
 				<textarea rows="5" cols="50" name="sourceedit[description]" form="sourceedit"
-					{tip text="Enter additional information (optional)" trigger="value"}>{$sourceedit.description}</textarea>
+					{tip text="Enter additional information (optional)" trigger="value"}>{$sourceedit.description|escape}</textarea>
 			</td>
 		</tr>
 		<tr>
